# career-connect

./: .env.example  .gitignore  db.sqlite3  main.py  pyproject.toml  requirements.txt
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0002_alter_user_id.py  0003_user_linkdin.py  0004_remove_user_linkdin.py  0005_user_linkdin.py  0006_user_github.py  0007_user_image.py  0008_rename_image_user_image.py  0009_auto_20250725_1127.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  django-admin.py
job/: settings.py  urls.py
jobapp/: forms.py  models.py  urls.py  views.py
jobapp/migrations/: 0001_initial.py  __init__.py
static/css/: profile-img-override.css
template/: head.html  header.html
template/account/: employee-edit-profile.html  employee-registration.html  employer-registration.html  login.html
template/jobapp/: about_us.html  all-applicants.html  applicant-details.html  dashboard.html  employee-edit-profile.html  index.html  job-edit.html  job-list.html  job-single.html  post-job.html  result.html
