[project]
name = "career-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django==5.1.3",
    "django-ckeditor>=6.7.3",
    "django-taggit>=6.1.0",
    "django-user-visit>=2.1",
    "pillow>=11.3.0",
    "whitenoise>=6.10.0",
]
